Fix quality flaw